# STProga

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt
algorithms/: CMakeLists.txt
algorithms/bubble_sort/: CMakeLists.txt  bubble_sort.c  bubble_sort.h
algorithms/kmp_search/: CMakeLists.txt  kmp_search.c  kmp_search.h
algorithms/merge_sort/: CMakeLists.txt  merge_sort.c  merge_sort.h
nachalo/: CMakeLists.txt
nachalo/bit_copy/: CMakeLists.txt  bit_copy.c  bit_copy.h
nachalo/kvadr_yravn/: CMakeLists.txt  main.c
nachalo/sr_files/: CMakeLists.txt  a.txt  b.txt  main.c
st_data/: CMakeLists.txt
st_data/complex/: CMakeLists.txt  complex_numb.c  complex_numb.h
st_data/matrix/: CMakeLists.txt  matrix.c  matrix.h
st_data/stack/: CMakeLists.txt  stack.c  stack.h
tests/: CMakeLists.txt
tests/algorithms/: CMakeLists.txt  test_bubble_sort.cpp  test_kmp_search.cpp  test_merge_sort.cpp
tests/nachalo/: CMakeLists.txt  test_bit_copy.cpp
tests/st_data/: CMakeLists.txt  test_complex.cpp  test_matrix.cpp  test_stack.cpp
