project("bit_copy" C)

file(GLOB SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
file(GLOB PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

add_library(${PROJECT_NAME} STATIC ${SOURCE} ${PUBLIC_HEADER})
add_library(BASE::BIT_COPY ALIAS ${PROJECT_NAME})

target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")